--- a/app/views/mailer/new.html.erb
+++ b/app/views/mailer/new.html.erb
@@ -6,7 +6,7 @@
 <section class="ask">
   <h2>お問い合わせ</h2>
   <div class="medium">
-    <%= form_for(@inquiry, url: maller_create_path) do |f|%>
+    <%= form_for(@inquiry, url: mailer_create_path) do |f|%>
       <%= f.label "名前" %>
       <%= f.text_field :name, id: "inputEmail", class: "form-control",style: "height: 25px"%>
       <%= f.label "email" %>
