--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -14,6 +14,11 @@
         <div class="page-header" style="text-align: center">
           <h1>友だち</h1>
         </div>
+        <% if @favorite_users.size == 0  %>
+          <div class="text-center "style="font-size: 25px; margin-top: 60px;">
+          <%= link_to "おすすめユーザを表示or検索", profiles_path %>
+          </div>
+        <% else %>
 
         <div class="align-items-center p-3 my-3 text-dark bg-light rounded shadow-sm">
           <div class="lh-1">
@@ -28,9 +33,6 @@
           </div>
         </div>
 
-        <% if @favorite_users.size == 0  %>
-          <p>お勧めユーザー♡カンナちゃんラブラブ</p>
-        <% else %>
           <div id="favorite_user"></div>
             <button type="button" class="btn btn-secondary btn-lg w-100 mt-2 mb-3" style="background-color: #00bfff" data-bs-toggle="collapse" data-bs-target="#collapseExample1" aria-expanded="false" aria-controls="collapseExample1">
               お気に入り
@@ -52,11 +54,15 @@
         <hr class="my-4">
       </div>
 
-
       <div class="col-lg mb-5" style="background: white; min-height: 100px;">
         <div class="page-header" style="text-align: center">
           <h1>コミュニティ</h1>
-        </div>
+      </div>
+        <% if @favorite_communities.size == 0  %>
+          <div class="text-center "style="font-size: 25px; margin-top: 60px;">
+            <%= link_to "コミュニティを探すor作成", "/communities/pickup" %>
+          </div>
+        <% else %>
 
         <div class="align-items-center p-3 my-3 text-dark bg-light rounded shadow-sm">
           <div class="lh-1">
@@ -70,10 +76,6 @@
             </nav>
           </div>
         </div>
-
-        <% if @favorite_communities.size == 0  %>
-          <p>グループおらんやんｗ</p>
-        <% else %>
 
         <div id="favorite_community"></div>
         <button type="button" class="btn btn-secondary btn-lg w-100 mt-2 mb-3" style="background-color: #00bfff" data-bs-toggle="collapse" data-bs-target="#collapseExample3" aria-expanded="false" aria-controls="collapseExample3">お気に入り</button>
