communityのban解除を実装

--- a/app/views/communities/members.html.erb
+++ b/app/views/communities/members.html.erb
@@ -1,6 +1,9 @@
 <div class="container">
+  <% if @community.user == @user %>
+    <%= link_to "banしたユーザー", community_banned_member_path %>
+  <% end %>
   <h2 class="text-center"><%= @community.name %>のメンバー</h2>
-  <%= render partial: 'communities/user', collection: @member, as: :user,locals: {community:@community, fixed_current_user:@user} %>
+  <%= render partial: 'communities/user', collection: @member, as: :user,locals: { community:@community, fixed_current_user:@user } %>
 
   <%= render "layouts/pagenate", pagenate: @member %>
 </div>
