--- a/app/views/profiles/friends.html.erb
+++ b/app/views/profiles/friends.html.erb
@@ -1,11 +1,11 @@
 <%= stylesheet_link_tag 'profiles', media: 'all', 'data-turbolinks-track': 'reload' %>
 <main class="container">
+  <h2 class="text-center pb-2 mb-0">友達 (<%= @friends.size %>人)</h2>
   <div class="my-3 p-3 bg-white rounded shadow-sm">
-    <h6 class="border-bottom pb-2 mb-0">友達 (<%= @friends.size %>)</h6>
     <% if @friends.size == 0 %>
       <p class="text-gray-dark">現在はいないようです！</p>
     <% end %>
-    　<%= render partial: "profiles/user", collection: @pagenate, as: :user %>
+    　<%= render partial: "profiles/user", collection: @pagenate, as: :user , locals: {friends: true, favorite_model: @favorite, fixed_current_user: @user}%>
   </div>
   <%= render 'layouts/pagenate', pagenate: @pagenate %>
 </main>
