--- a/app/views/reports/new.html.erb
+++ b/app/views/reports/new.html.erb
@@ -4,8 +4,10 @@
 
 <section class="ask">
   <h2>通報内容</h2>
+  <%= @user.name %>
+  <%= @post.content %>
   <div class="medium">
-    <%= form_for(@report, url:  reports_create_path) do |f|%>
+    <%= form_for(@report, url:  timeline_reports_path) do |f|%>
       <%= f.text_area :message , id: "inputEmail", class: "form-control"%><br>
       <%= f.submit "送信", class:"btn btn-lg btn-secondary fw-bold border-white bg-blue" ,style: "margin-right: 10px; width: 150px;color:#FFF"%>
       <%= f.submit "クリア" ,type: :reset , class:"btn btn-lg btn-secondary fw-bold border-white bg-blue",style: "margin-right: 10px; width: 150px;color:#FFF"%>
