--- a/app/views/reports/new.html.erb
+++ b/app/views/reports/new.html.erb
@@ -4,7 +4,7 @@
 
 <section class="ask">
   <h2>通報内容</h2>
-  <%= @user.name %>
+  <%= @user.nickname %>
   <%= @post.content %>
   <div class="medium">
     <%= form_for(@report, url:  timeline_reports_path) do |f|%>
