n1200226さんが変更

--- a/app/views/contact_mailer/report_mail.html.erb
+++ b/app/views/contact_mailer/report_mail.html.erb
@@ -12,6 +12,11 @@
 <br/>
 <p>通報内容</p>
 <p>-------------------------------------------</p>
+<p>通報相手</p>
+<p><%= @reported_user %></p>
+<p>該当内容</p>
+<p><%= @reported_content %></p>
+<p>通報内容</p>
 <p><%= @report.message %></p>
 <p>-------------------------------------------</p>
 <br/>
