--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -53,7 +53,7 @@
              <button id="submit_button" style="display: none" type="submit" class="btn btn-primary form-control" ></button>
              <span class="m-1" style="font-size: 1.6rem;color: #5e5e5e"><i class="fas fa-paper-plane"></i></span>
            </label>
-           <label><!-- Button trigger modal -->
+           <label>
              <button style="display: none" type="button" class="btn btn-primary form-control" data-bs-toggle="modal" data-bs-target="#exampleModal"></button>
              <span class="m-1" style="font-size: 1.6rem;color: #5e5e5e"> <i class="fas fa-th-large"></i></span>
            </label>
