--- a/app/views/profiles/pickup.html.erb
+++ b/app/views/profiles/pickup.html.erb
@@ -5,7 +5,7 @@
     　 <% if @users.size == 0 %>
       <p class="text-gray-dark">現在はいないようです！</p>
       <% end %>
-    <%= render partial: "profiles/user", collection: @pagenate, as: :user %>
+    <%= render partial: "profiles/user", collection: @users, as: :user %>
   </div>
-  <%= render 'layouts/pagenate', pagenate: @pagenate %>
+  <%= render 'layouts/pagenate', pagenate: @users %>
 </div>
