--- a/app/views/profiles/pickup.html.erb
+++ b/app/views/profiles/pickup.html.erb
@@ -1,7 +1,7 @@
 <%= stylesheet_link_tag 'profiles', media: 'all', 'data-turbolinks-track': 'reload' %>
 <div class="container">
   <div class="my-3 p-3 bg-white rounded shadow-sm">
-    <h6 class="border-bottom pb-2 mb-0">おすすめユーザー (<%= @users.size %>) </h6>
+    <h6 class="border-bottom pb-2 mb-0">おすすめユーザー (<%= @count %>) </h6>
     　 <% if @users.size == 0 %>
       <p class="text-gray-dark">現在はいないようです！</p>
       <% end %>
