コミュニティ通報機能作成

--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -11,80 +11,77 @@
     <% if @leader == current_user %>
       <%= link_to "チャット", chats_path, class: "btn btn-outline-dark mx-2" %>
       <%= link_to "編集", edit_community_path, class: "btn btn-outline-dark mx-2" %>
-      <% if is_community_favorite?(@favorite, @user, @community) %>
-        <%= link_to "お気に入り解除", page_favorite_community_delete_path(@user.id, page_id: @community.id), method: :delete, class: 'btn btn-outline-dark mx-2 bg-dark text-light', style: "", data: { disable_with: 'お気に入り解除' } %>
-      <% else %>
-        <% if @join %>
-          <%=  link_to "チャット", chats_path,class: "btn btn-outline-dark mx-2" %>
-          <%=  link_to "脱退" , community_manage_path(@community.id,current_user.id), method: :delete,class: "btn btn-outline-dark mx-2", data: {confirm: "本当に脱退しますか？"}  %>
-          <div class="ms-2">
-            <label>
-              <button type="button" class="btn btn-primary" style="display: none" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever=<% @community.id %>></button>
-              <i class="fas fa-bullhorn"></i>
-            </label>
-          </div>
-          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">通報</h5>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      <% if @join %>
+        <%= link_to "チャット", chats_path, class: "btn btn-outline-dark mx-2" %>
+        <%= link_to "脱退", community_manage_path(@community.id, current_user.id), method: :delete, class: "btn btn-outline-dark mx-2", data: { confirm: "本当に脱退しますか？" } %>
+        <div class="ms-2">
+          <label>
+            <button type="button" class="btn btn-primary" style="display: none" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever=
+              <% @community.id %>></button>
+            <i class="fas fa-bullhorn"></i>
+          </label>
+        </div>
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">通報</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <%= form_for(@report, url: community_reports_path(@community.id)) do |f| %>
+                  <%= f.hidden_field :user_id, id: "user_id ", class: "form-control", value: current_user.id %>
+                  <%= f.hidden_field :community_id, id: "community_id", class: "form-control", value: @community.id %>
+                  <div> <%= @community.name %></div>
+                  <%= f.text_area :message, id: "message", class: "form-control" %><br>
+                  </div>
+                  <div class="modal-footer">
+                    <%= f.submit "送信", class: "btn btn-lg btn-secondary fw-bold border-white bg-blue", style: "margin-right: 10px; width: 150px;color:#FFF" %>
+                    <%= f.submit "クリア", type: :reset, class: "btn btn-lg btn-secondary fw-bold border-white bg-blue", style: "margin-right: 10px; width: 150px;color:#FFF" %>
+                  </div>
+                <% end %>
                 </div>
-          <div class="modal-body">
-            <%= form_for(@report, url:  community_reports_path(@community.id)) do |f|%>
-              <%= f.hidden_field :user_id , id: "user_id ", class: "form-control",value: current_user.id  %>
-              <%= f.hidden_field :post_id ,id: "community_id" , class: "form-control",value: @community.id %>
-              <div> <%= @community.name %></div>
-              <%= f.text_area :message , id: "message", class: "form-control"%><br>
-              </div>
-              <div class="modal-footer">
-                <%= f.submit "送信", class:"btn btn-lg btn-secondary fw-bold border-white bg-blue" ,style: "margin-right: 10px; width: 150px;color:#FFF"%>
-                <%= f.submit "クリア" ,type: :reset , class:"btn btn-lg btn-secondary fw-bold border-white bg-blue",style: "margin-right: 10px; width: 150px;color:#FFF"%>
-              </div>
-            <% end %>
           </div>
-            </div>
-          </div>
-        <%  else  %>
-          <%= link_to "参加", community_manage_index_path(@community.id), method: :post, class: "btn btn-outline-dark" %>
-        <% end %>
+        </div>
+      <% else %>
+        <%= link_to "参加", community_manage_index_path(@community.id), method: :post, class: "btn btn-outline-dark" %>
       <% end %>
+    <% end %>
 
-    </div>
   </div>
-</div>
-<div class="position-relative overflow-hidden p-1 p-md-5 m-md-3 text-center bg-light overflow-scroll" style="height: 530px">
-  <div class="col-md-5 p-lg-1 mx-auto my-1">
-    <h2 class="display-5 text-center">概要</h2>
-    <p class="lead fw-normal"><%= safe_join(@community.content.split("\n"), tag(:br)) %></p>
-  </div>
-</div>
 
-<div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3">
-  <div class="bg-dark me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-white text-center" style="height: 530px">
-    <div class="my-3 py-3">
-      <h2 class="display-5 text-center">参加者</h2>
-      <p class="mb-0"><%= link_to "リーダー : #{@leader.name}", profile_path(@leader.userid), class: "lead text-white", style: "text-decoration:none;" %></p>
-      <% @community.community_members.includes(:user).shuffle.first(10).each do |m| %>
-        <% unless @leader == m.user %>
-          <p class="mb-0"><%= link_to "#{m.user.name}", profile_path(m.user.userid), class: "lead text-white", style: "text-decoration:none;" %></p>
-        <% end %>
-      <% end %>
-      <hr/>
-      <p class="mb-0 small"><%= link_to "もっと見る...", community_members_path(@community.id), class: "lead text-white", style: "text-decoration:none;" %></p>
+  <div class="position-relative overflow-hidden p-1 p-md-5 m-md-3 text-center bg-light overflow-scroll" style="height: 530px">
+    <div class="col-md-5 p-lg-1 mx-auto my-1">
+      <h2 class="display-5 text-center">概要</h2>
+      <p class="lead fw-normal"><%= safe_join(@community.content.split("\n"), tag(:br)) %></p>
     </div>
   </div>
 
-  <div class="bg-light me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center" style="height: 530px">
-    <div class="my-3 py-3">
-      <h2 class="display-5">タグ</h2>
-      <% @community.tags.each do |t| %>
-        <%= link_to search_tag_path(t), class: "text-decoration-none" do %>
-          <span class="lead mb-0">#<%= t %> </span>
+  <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3">
+    <div class="bg-dark me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-white text-center" style="height: 530px">
+      <div class="my-3 py-3">
+        <h2 class="display-5 text-center">参加者</h2>
+        <p class="mb-0"><%= link_to "リーダー : #{@leader.name}", profile_path(@leader.userid), class: "lead text-white", style: "text-decoration:none;" %></p>
+        <% @community.community_members.includes(:user).shuffle.first(10).each do |m| %>
+          <% unless @leader == m.user %>
+            <p class="mb-0"><%= link_to "#{m.user.name}", profile_path(m.user.userid), class: "lead text-white", style: "text-decoration:none;" %></p>
+          <% end %>
         <% end %>
-      <% end %>
+        <hr/>
+        <p class="mb-0 small"><%= link_to "もっと見る...", community_members_path(@community.id), class: "lead text-white", style: "text-decoration:none;" %></p>
+      </div>
+    </div>
+
+    <div class="bg-light me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center" style="height: 530px">
+      <div class="my-3 py-3">
+        <h2 class="display-5">タグ</h2>
+        <% @community.tags.each do |t| %>
+          <%= link_to search_tag_path(t), class: "text-decoration-none" do %>
+            <span class="lead mb-0">#<%= t %> </span>
+          <% end %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
-
 
