--- a/app/views/timelines/_post.html.erb
+++ b/app/views/timelines/_post.html.erb
@@ -22,36 +22,37 @@
         object-fit: cover;
     }
 
-    .red{
+    .red {
         color: red;
     }
 </style>
-<div class="panel-content panel-activity">
-  <div class="d-flex text-muted">
-    <%= link_to profile_path(post.user.userid), style: "color:black" do %>
-      <% if post.user.image.nil? %>
-        <%= image_tag "/user_images/default_icon.png", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded", width: "40px", height: "40px" %>
-      <% else %>
-        <%= image_tag "/user_images/#{post.user.image}", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded", width: "40px", height: "40px" %>
+<div id="post_<%= post.id %>">
+  <div class="panel-content panel-activity">
+    <div class="d-flex text-muted">
+      <%= link_to profile_path(post.user.userid), style: "color:black" do %>
+        <% if post.user.image.nil? %>
+          <%= image_tag "/user_images/default_icon.png", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded", width: "40px", height: "40px" %>
+        <% else %>
+          <%= image_tag "/user_images/#{post.user.image}", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded", width: "40px", height: "40px" %>
+        <% end %>
       <% end %>
-    <% end %>
-    <p class="pb-3 mb-0 lh-sm w-100">
-      <strong class="text-dark" style="font-size:20px;margin: 0"><%= post.user.nickname %></strong>
-      <span class="text-gray small" style="margin: 0">@<%= post.user.userid %></span>
-      <span class="text-gray small"><i class="far fa-clock clock-icon"></i><%= time_ago_in_words(post.created_at) %></span>
-      <br/>
-      <br/>
-      <span class="spans text-dark" style="font-size:18px; margin: 0;"><%= html_escape(html_with_link_to_hashtag(h(post.content).html_safe)).gsub(/\r\n|\r|\n/, "<br />").html_safe %></span>
-      <br/>
-    </p>
-  </div>
-  <div class="d-flex pb-3  justify-content-between" style="margin-left: 50px">
-    <% if post.image? %>
-      <%= image_tag post.image.url, "data-lity" => "data-lity", class: "im" %>
-    <% end %>
-  </div>
-  <div class="d-flex justify-content-between" style="margin-left: 45px">
-    <div class="d-flex flex-row">
+      <p class="pb-3 mb-0 lh-sm w-100">
+        <strong class="text-dark" style="font-size:20px;margin: 0"><%= post.user.nickname %></strong>
+        <span class="text-gray small" style="margin: 0">@<%= post.user.userid %></span>
+        <span class="text-gray small"><i class="far fa-clock clock-icon"></i><%= time_ago_in_words(post.created_at) %></span>
+        <br/>
+        <br/>
+        <span class="spans text-dark" style="font-size:18px; margin: 0;"><%= html_escape(html_with_link_to_hashtag(h(post.content).html_safe)).gsub(/\r\n|\r|\n/, "<br />").html_safe %></span>
+        <br/>
+      </p>
+    </div>
+    <div class="d-flex pb-3  justify-content-between" style="margin-left: 50px">
+      <% if post.image? %>
+        <%= image_tag post.image.url, "data-lity" => "data-lity", class: "im" %>
+      <% end %>
+    </div>
+    <div class="d-flex justify-content-between" style="margin-left: 45px">
+      <div class="d-flex flex-row">
       <span class="likes">
         <% if current_user.liked_by?(post.id) %>
           <%= button_to timeline_like_path(post.id, current_user.id), method: :delete, remote: true, class: "send bg-white", style: "height: 15.5px;padding: 0", data: { disable_with: "<i class='fas fa-heart'></i>" } do %>
@@ -62,70 +63,77 @@
             <% when 1 then
                  icon = '<i class="fas fa-hand-holding-heart red"></i>'
                  current_user.achievement.change_rare_like #1/65536 %>
-            <% when 2..6 then icon = '<i class="fas fa-laugh-wink"></i>'#1/16384 %>
-            <% when 11..19 then icon = '<i class="fab fa-yarn"></i>'#1/8192 %>
-            <% when 20..28 then icon = '<i class="fab fa-node-js"></i>'#1/8192 %>
-            <% when 29..37 then icon = '<i class="fab fa-yarn"></i>'#1/8192 %>
-            <% when 38..103 then icon = '<i class="fas fa-rocket"></i>' #1/1000 %>
-            <% when 1000..1261 then icon = '<i class="fas fa-mug-hot"></i>' #1/250 %>
-            <% when 2000..2654 then icon = '<i class="fas fa-heartbeat"></i>' #1/100 %>
-            <% else icon = '<i class="fas fa-heart"></i>' %>
+            <% when 2..6 then
+                 icon = '<i class="fas fa-laugh-wink"></i>' #1/16384 %>
+          <% when 11..19 then
+               icon = '<i class="fab fa-yarn"></i>' #1/8192 %>
+          <% when 20..28 then
+               icon = '<i class="fab fa-node-js"></i>' #1/8192 %>
+          <% when 29..37 then
+               icon = '<i class="fab fa-yarn"></i>' #1/8192 %>
+          <% when 38..103 then
+               icon = '<i class="fas fa-rocket"></i>' #1/1000 %>
+          <% when 1000..1261 then
+               icon = '<i class="fas fa-mug-hot"></i>' #1/250 %>
+          <% when 2000..2654 then
+               icon = '<i class="fas fa-heartbeat"></i>' #1/100 %>
+          <% else icon = '<i class="fas fa-heart"></i>' %>
           <% end %>
           <%= button_to timeline_likes_path(post.id), method: :post, remote: true, class: "send bg-white", style: "height: 15.5px;padding: 0", data: { disable_with: icon } do %>
             <i class="far fa-heart"></i>
           <% end %>
         <% end %>
       </span>
-      <span>
+        <span>
         <%= post.likes.size %>
-        <span class="comments">
+          <span class="comments">
           <%= link_to timeline_path(post.id) do %>
             <i class="far fa-comment-alt" style="height: 15.5px"></i>
             <span class="text-dark"><%= post.comments.size %></span>
           <% end %>
         </span>
       </span>
-      <div class="ms-2">
+        <div class="ms-2">
           <label>
-          <button type="button" class="btn btn-primary" style="display: none" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever=<% post.id %>></button>
-          <i class="fas fa-bullhorn"></i>
+            <button type="button" class="btn btn-primary" style="display: none" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever=
+              <% post.id %>></button>
+            <i class="fas fa-bullhorn"></i>
           </label>
+        </div>
       </div>
-    </div>
-    <div>
-      <% if post.user == current_user %>
-        <%= button_to(timeline_path(post.id), class: "send bg-white", method: :delete, data: { disable_with: "削除中..." }) do %>
-          <i class="far fa-trash-alt"></i>
+      <div>
+        <% if post.user == current_user %>
+          <%= button_to(timeline_path(post.id), class: "send bg-white", method: :delete, data: { disable_with: "削除中..." }) do %>
+            <i class="far fa-trash-alt"></i>
+          <% end %>
         <% end %>
-      <% end %>
-    </div>
+      </div>
 
+    </div>
   </div>
-</div>
 
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">通報</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">通報</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <%= form_for(report, url: timeline_reports_path(post.id)) do |f| %>
+            <%= f.hidden_field :user_id, id: "user_id ", class: "form-control", value: current_user.id %>
+            <%= f.hidden_field :post_id, id: "post_id", class: "form-control", value: post.id %>
+            <%= f.hidden_field :reported_user_id, id: "reported_user_id ", class: "form-control", value: post.user.id %>
+            <div> <%= post.user.nickname %></div>
+            <div> <%= post.content %></div>
+            <%= f.text_area :message, id: "message", class: "form-control" %><br>
+            <div class="modal-footer">
+              <%= f.submit "送信", class: "btn btn-lg btn-secondary fw-bold border-white bg-blue", style: "margin-right: 10px; width: 150px;color:#FFF" %>
+              <%= f.submit "クリア", type: :reset, class: "btn btn-lg btn-secondary fw-bold border-white bg-blue", style: "margin-right: 10px; width: 150px;color:#FFF" %>
+            </div>
+          <% end %>
+        </div>
       </div>
-
-      <div class="modal-body">
-        <%= form_for(@report, url:  timeline_reports_path(post.id)) do |f|%>
-          <%= f.hidden_field :user_id , id: "user_id ", class: "form-control",value: current_user.id  %>
-          <%= f.hidden_field :post_id ,id: "post_id" , class: "form-control",value: post.id %>
-          <%= f.hidden_field :reported_user_id , id: "reported_user_id ", class: "form-control",value: post.user.id  %>
-          <div> <%= post.user.nickname %></div>
-          <div> <%= post.content %></div>
-          <%= f.text_area :message , id: "message", class: "form-control"%><br>
-      </div>
-      <div class="modal-footer">
-        <%= f.submit "送信", class:"btn btn-lg btn-secondary fw-bold border-white bg-blue" ,style: "margin-right: 10px; width: 150px;color:#FFF"%>
-        <%= f.submit "クリア" ,type: :reset , class:"btn btn-lg btn-secondary fw-bold border-white bg-blue",style: "margin-right: 10px; width: 150px;color:#FFF"%>
-      </div>
-        <% end %>
-
     </div>
   </div>
 </div>
